# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-03-02 09:22:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-5

    Summary:
      update Changelog
    Revision:
      itools--main--0.8--patch-5


    new files:
     .arch-ids/Changelog.id Changelog

    removed files:
     .arch-ids/Changelog.id Changelog


2005-02-25 13:08:04 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-4

    Summary:
      resources, implement __setitem__ (Zope 2 file resources)
    Revision:
      itools--main--0.8--patch-4


    modified files:
     resources/zope2.py


2005-02-25 11:51:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-3

    Summary:
      resources, implement get_ctime and get_atime for Zope 2
    Revision:
      itools--main--0.8--patch-3

    Zope 2 objects don't have neither creation time nor modification time,
    so we return None for both.

    modified files:
     resources/zope2.py


2005-02-23 19:58:55 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-2

    Summary:
      resources, fix zope2 resources
    Revision:
      itools--main--0.8--patch-2

    Use "_setObject" and "_delObject" instead of "_setOb" and "_delOb".
    
    Correctly resolve the path in "_get_object".

    modified files:
     resources/zope2.py


2005-02-23 19:50:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-1

    Summary:
      resources, initialization is more robust now
    Revision:
      itools--main--0.8--patch-1

    Resource initialization (__init__) now checks for the type of the
    value passed. It accepts instances of "uri.Reference", strings and
    now also instances of "uri.Path".

    modified files:
     resources/base.py


2005-02-23 17:50:05 GMT	J. David Ibanez <jdavid@itaapy.com>	base-0

    Summary:
      tag of jdavid@itaapy.com--public/itools--main--0.7--patch-30
    Revision:
      itools--main--0.8--base-0

    (automatically generated log message)

    new patches: