@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
 #
 
+2005-03-02 20:10:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-6
+
+    Summary:
+      catalog, now the method "search" is a generator
+    Revision:
+      itools--main--0.8--patch-6
+
+
+    modified files:
+     Changelog catalog/Catalog.py
+
+
 2005-03-02 09:22:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-5
 
     Summary:
